force-app/main/default/objects/Processed_Event__c/Processed_Event__c.object-meta.xml
<CustomObject>
    <description>Idempotency store. Unique Dedup_Key (subscriber + EventUuid) and Business_Key (subscriber + idempotency key) prevent duplicate processing.</description>
    <label>Processed Event</label>
    <nameField>
        <displayFormat>PE-{00000000}</displayFormat>
        <label>Processed Event Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Processed Events</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>