force-app/main/default/objects/Processed_Event__c/fields/Business_Key__c.field-meta.xml
<CustomField>
    <fullName>Business_Key__c</fullName>
    <externalId>true</externalId>
    <label>Business Key</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>