force-app/main/default/objects/Processed_Event__c/fields/Dedup_Key__c.field-meta.xml
<CustomField>
    <fullName>Dedup_Key__c</fullName>
    <externalId>true</externalId>
    <label>Dedup Key</label>
    <length>100</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>