force-app/main/default/objects/Processed_Event__c/fields/Event_Uuid__c.field-meta.xml
<CustomField>
    <fullName>Event_Uuid__c</fullName>
    <label>Event UUID</label>
    <length>36</length>
    <required>true</required>
    <type>Text</type>
</CustomField>