force-app/main/default/objects/Processed_Event__c/fields/Idempotency_Key__c.field-meta.xml
<CustomField>
    <fullName>Idempotency_Key__c</fullName>
    <label>Idempotency Key</label>
    <length>80</length>
    <required>true</required>
    <type>Text</type>
</CustomField>