force-app/main/default/objects/Processed_Event__c/fields/Subscriber_Name__c.field-meta.xml
<CustomField>
    <fullName>Subscriber_Name__c</fullName>
    <label>Subscriber Name</label>
    <length>40</length>
    <required>true</required>
    <type>Text</type>
</CustomField>